@@ -27,7 +27,7 @@ my @tests = (
 while (defined (my $input = shift @tests)) {
     my ($expect, $object, $error) = shift @tests;
     decode_aref 
-        { '<x:subject>' => { '<x:predicate>' => $input } },
+        { 'x:subject' => { '<x:predicate>' => $input } },
         callback => sub { shift; shift; $object = \@_; };
     is_deeply $object, $expect, "\"$input\"";
 }
