@@ -1,1 +1,1 @@
-{ "<x:subject>":{"dct_extent":"123^x_bar"}}
+{ "x:subject":{"dct_extent":"123^x_bar"}}
