@@ -1,1 +1,1 @@
-{"<x:subject>":{"a":{"_id":"x_bar"}}}
+{"x:subject":{"a":{"_id":"x_bar"}}}
