@@ -1,1 +1,1 @@
-{"<x:subject>":{"a":{"_id":"\"x\""}}}
+{"x:subject":{"a":{"_id":"\"x\""}}}
