@@ -1,1 +1,1 @@
-{"<x:subject>":{"a":{"_id":[[]]}}}
+{"x:subject":{"a":{"_id":[[]]}}}
