@@ -1,1 +1,1 @@
-{"<x:subject>":{"bar_y":"123"}}
+{"x:subject":{"bar_y":"123"}}
