@@ -1,1 +1,1 @@
-{"<x:subject>":{"_:1":""}}
+{"x:subject":{"_:1":""}}
