@@ -1,1 +1,1 @@
-{"<x:a>":{"a":"foaf:Person","_id":"<x:b>"}}
+{"x:a":{"a":"foaf:Person","_id":"<x:b>"}}
