@@ -1,1 +1,1 @@
-{"<x:a>":{"a":"foaf:Person","_id":null}}
+{"x:a":{"a":"foaf:Person","_id":null}}
