@@ -1,1 +1,1 @@
-{ "<x:a>" : { "_id" : "<x:b>", "a" : "foaf:Person" } }
+{ "x:a" : { "_id" : "<x:b>", "a" : "foaf:Person" } }
