@@ -1,1 +1,1 @@
-{"<x:subject>":{"a":null}}
+{"x:subject":{"a":null}}
