@@ -1,1 +1,1 @@
-{"<x:subject>":{"a":[null,"foaf_Person"]}}
+{"x:subject":{"a":[null,"foaf_Person"]}}
