@@ -1,1 +1,1 @@
-{"<x:subject@>":{"a":"x:object1@"}}
+{"x:subject@":{"a":"x:object1@"}}
